--- a/Trabaja_con_nosotros.html
+++ b/Trabaja_con_nosotros.html
@@ -206,10 +206,10 @@
                 </ul>
                 <p>
                     <a>Si queres ser un CodeCrafter accedé <br> a nuestra bolsa de trabajo.<br>
-                        Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff.</a>
-                </p><br>
-                <h4>Que estas esperando!!</h4>
-
+                        Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff. <br>
+                        <h4>Que estas esperando!!</h4>
+                    </a>
+                </p>
             </div>
 
 
