--- a/compras.html
+++ b/compras.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    
+    <header class="header">
+        <div class="container">
+            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
+        </div>
+    </header>
+
     <h1>Cómo Comprar</h1>
     <p><strong>Inicio - Cómo Comprar</strong></p>
     <p>En esta página te indicamos todas las instrucciones para realizar una compra en nuestra tienda.</p>
