--- a/pagos.html
+++ b/pagos.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medios de Pago</title>
-    <link rel="stylesheet" href="pagos.css">
+    <link rel="stylesheet" href="pago.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
+        </div>
+    </header>
     <div class="container">
         <h1>Medios de Pago</h1>
         <div class="payment-methods">
