--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
+        </div>
+    </header>
     <h1><u>Políticas de Privacidad</u></h1>
     <p><strong>1. Introducción</strong></p>
     <ol>
@@ -74,7 +79,7 @@
         <li>
             <p><strong>8. Contacto</strong></p>
             <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede comunicarse con nosotros a través de <a
-                    href="soporte@thecodecrafters.netlify.app/">soporte@thecodecrafters.netlify.app</a>.</p>
+                    href="soporte@ccrafters.com">soporte@ccrafters.com</a>.</p>
         </li>
     </ol>
 </body>
