--- a/quienessomos.html
+++ b/quienessomos.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
+        </div>
+    </header>
     <div class="card">
         <img class="card_img" src="./logo/logo.webp" alt="Logo de la tienda">
-        <h1 class="card_title">The Codecrafters</h1>
+        <h1 class="card_title">Codecrafters</h1>
         <h2 class="card_subtitle">Sobre Nosotros</h2>
         <p class="card_content">Somos una empresa de venta y servicios en el rubro informático con amplia trayectoria en
             el mercado. </p>
