--- a/tazas.html
+++ b/tazas.html
@@ -12,36 +12,82 @@
 </head>
 
 <body>
-    <div class="tazas" data-name="p-6">
-        <img src="./tienda/tazas/taza gamer.webp" alt="">
-        <h3>taza gamer joystick</h3>
-        <div class="price">$31.760</div>
-    </div>
-    <div class="tazas" data-name="p-6">
-        <img src="./tienda/tazas/taza joystick.webp" alt="">
-        <h3>taza joysticks</h3>
-        <div class="price">$31.760</div>
-    </div>
-    <div class="tazas" data-name="p-6">
-        <img src="./tienda/tazas/taza game over.webp" alt="">
-        <h3>taza game over</h3>
-        <div class="price">$30.390</div>
-    </div>
-    <div class="tazas" data-name="p-6">
-        <img src="./tienda/tazas/taza playstation.webp" alt="">
-        <h3>gorra con joystick playStation color</h3>
-        <div class="price">$32.960</div>
-    </div>
-    <div class="tazas" data-name="p-6">
-        <img src="./tienda/tazas/taza joystick game over.webp" alt="">
-        <h3>taza joystick game over</h3>
-        <div class="price">$34.990</div>
-    </div>
-    <div class="tazas" data-name="p-6">
-        <img src="./tienda/tazas/taza game of thrones.webp" alt="">
-        <h3>taza Game of Thrones</h3>
-        <div class="price">$32.780</div>
-    </div>
+
+    <header class="header">
+        <div class="container">
+            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
+        </div>
+    </header>
+
+    <main class="products container">
+
+        <h2>Tazas</h2>
+
+        <div class="product-content">
+
+            <div class="product">
+                <img src="./tienda/tazas/fivenightsatfreddys2.png" alt="">
+                <div class="product-txt">
+                    <h3>taza game over monkey</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$31.760</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/tazas/xsxZWYXnQohPayJasSQZOsBP6zTgY18uDgiNxnJ0.png" alt="">
+                <div class="product-txt">
+                    <h3>taza Game of Thrones</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$31.760</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/tazas/taza game over.webp" alt="">
+                <div class="product-txt">
+                    <h3>taza game over</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$30.390</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/tazas/taza playstation.webp" alt="">
+                <div class="product-txt">
+                    <h3>taza joystick playStation </h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$22.360</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/tazas/taza joystick game over.webp" alt="">
+                <div class="product-txt">
+                    <h3>taza joystick game over</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$20.430</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/tazas/mikecrack2.png" alt="">
+                <div class="product-txt">
+                    <h3>taza Gamer</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$20.380</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
 
 </body>
 
