--- a/term.html
+++ b/term.html
@@ -9,9 +9,6 @@
 </head>
 
 <body>
-    <div>
-        <a href="term.html" download>Descargar Terminos y Condiciones</a>
-    </div>
     <h1><u>Términos y Condiciones - CodeCrafters</u></h1>
     <ol>
         <li>
@@ -64,10 +61,13 @@
         <li>
             <p><strong> Contacto</strong></p>
             <p>Si tiene alguna pregunta sobre estos términos y condiciones, puede comunicarse con nosotros a través de
-                <a href="soporte@thecodecrafters.netlify.app">soporte@thecodecrafters.netlify.app</a>.
+                <a href="soporte@ccrafters.com">soporte@ccrafters.com</a>.
             </p>
         </li>
     </ol>
+    <div>
+        <a href="term.html" download>Descargar Terminos y Condiciones</a>
+    </div>
 </body>
 
 </html>
