--- a/gorras.html
+++ b/gorras.html
@@ -12,41 +12,90 @@
 </head>
 
 <body>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra gamer.webp" alt="">
-        <h3>gorra gamer</h3>
-        <div class="price">$31.760</div>
-    </div>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra gamer1.webp" alt="">
-        <h3>gorra gamer joystick</h3>
-        <div class="price">$31.760</div>
-    </div>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra gamer2.webp" alt="">
-        <h3>gorra mi juego esta en pausa</h3>
-        <div class="price">$30.390</div>
-    </div>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra playstation.webp" alt="">
-        <h3>gorra con logo playStation color</h3>
-        <div class="price">$32.960</div>
-    </div>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra assasins creed.webp" alt="">
-        <h3>buzo elige tu arma</h3>
-        <div class="price">$34.990</div>
-    </div>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra call of duty.webp" alt="">
-        <h3>gorra Call of Duty</h3>
-        <div class="price">$32.780</div>
-    </div>
-    <div class="gorras" data-name="p-6">
-        <img src="./tienda/gorras/gorra evangelion.webp" alt="">
-        <h3>gorra Evangelion</h3>
-        <div class="price">$31.650</div>
-    </div>
+
+    <header class="header">
+        <div class="container">
+            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
+        </div>
+    </header>
+
+    <main class="products container">
+
+        <h2>Gorras</h2>
+
+        <div class="product-content">
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra gamer.webp" alt="">
+                <div class="product-txt">
+                    <h3>gorra game over</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$31.760</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra gamer1.webp" alt="">
+                <div class="product-txt">
+                    <h3>gorra gamer joystick</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$31.760</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra gamer2.webp" alt="">
+                <div class="product-txt">
+                    <h3>Gorra pausa</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$30.390</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra playstation.webp" alt="">
+                <div class="product-txt">
+                    <h3>gorra playstation</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$22.360</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra assasins creed.webp" alt="">
+                <div class="product-txt">
+                    <h3>Gorra asassin creed</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$20.430</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra call of duty.webp" alt="">
+                <div class="product-txt">
+                    <h3>Gorra call of duty</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$20.380</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+
+            <div class="product">
+                <img src="./tienda/gorras/gorra evangelion.webp" alt="">
+                <div class="product-txt">
+                    <h3>gorra Evangelion</h3>
+                    <p>Ceramica</p>
+                    <p class="precio">$20.380</p>
+                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
+                </div>
+            </div>
+            
+
 </body>
 
 </html>
