--- a/seccion4.html
+++ b/seccion4.html
@@ -99,11 +99,11 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Buenos Aires</li>
                         <li><i class="fas fa-phone"></i> (444) 444 444 444</li>
-                        <li><i class="fas fa-envelope-open-text"></i> https://thecodecrafters.netlify.app/</li>
+                        <li><i class="fas fa-envelope-open-text"></i> codecrafters@website.com</li>
                     </ul>
-                    <p>Somos expertos en insumos informáticos con una década de liderazgo en el mercado tecnológico
-                        especializado. </p>
-                    <p>Thecodecrafters.netlify.app/</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero provident ipsam necessitatibus
+                        repellendus?</p>
+                    <p>CodeCrafters.com</p>
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
                     <li><a href="quienessomos.html">Nosotros</a></li>
                     <li><a href="seccion2.html">Nuestros servicios</a></li>
                     <li><a href="privacy.html">Condiciónes</a></li>
-                    <li><a href="Trabaja_con_nosotros.html">Afiliate</a></li>
+                    <li><a href="postulante.html">Afiliate</a></li>
                 </ul>
             </div>
 
@@ -145,22 +145,6 @@
             </div>
 
             <div class="link">
-                <ul>
-                    <li>
-                        <a href="Trabaja_con_nosotros.html">
-                            <h3>Trabaja con nosotros</h3>
-                        </a>
-                    </li>
-                </ul>
-                <p>
-                <a>Si queres ser un CodeCrafter accedé <br> a nuestra bolsa de trabajo.<br>
-                    Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff. <br>
-                    <h4>Que estas esperando!!</h4>
-                </a>
-                </p>
-            </div>
-            
-            <div class="link">
                 <h3>Siguenos</h3>
                 <div class="social-link">
                     <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
@@ -174,6 +158,69 @@
         </div>
 
     </footer>
+
+    <button id="btn-login" class="btnLogin-popup">
+        <i class="fas fa-user"></i> Login
+    </button>
+
+    <div id="loginForm" class="login-form wrapper">
+        <span class="icon-close"><ion-icon name="close"></ion-icon></span>
+        <div class="form-box login">
+            <h2>Login</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">
+                        Remember me</label>
+                    <a href="#">Forgot Password?</a>
+                </div>
+                <button type="submit" class="btn">Login</button>
+                <div class="login-register">
+                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+                </div>
+            </form>
+        </div>
+        <div class="form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox"> I Agree to terms & conditions</label>
+                </div>
+                <button type="submit" class="btn">Register</button>
+                <div class="login-register">
+                    <p>Already have an account? <a href="#" class="login-link">Login</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="script4.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 
