--- a/privacy.html
+++ b/privacy.html
@@ -79,7 +79,7 @@
         <li>
             <p><strong>8. Contacto</strong></p>
             <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede comunicarse con nosotros a través de <a
-                    href="soporte@ccrafters.com">soporte@ccrafters.com</a>.</p>
+                    href="soporte@ccrafters.com">soporte@thecodecrafters.netlify.app</a>.</p>
         </li>
     </ol>
 </body>
