--- a/Trabaja_con_nosotros.html
+++ b/Trabaja_con_nosotros.html
@@ -170,7 +170,7 @@
                     <li><a href="quienessomos.html">Nosotros</a></li>
                     <li><a href="seccion2.html">Nuestros servicios</a></li>
                     <li><a href="privacy.html">Condiciónes</a></li>
-                    <li><a href="postulante.html">Afiliate</a></li>
+                    <li><a href="Trabaja_con_nosotros.html">Afiliate</a></li>
                 </ul>
             </div>
 
