--- a/term.html
+++ b/term.html
@@ -61,7 +61,7 @@
         <li>
             <p><strong> Contacto</strong></p>
             <p>Si tiene alguna pregunta sobre estos términos y condiciones, puede comunicarse con nosotros a través de
-                <a href="soporte@ccrafters.com">soporte@ccrafters.com</a>.
+                <a href="soporte@theccodecrafters.netlify.app">soporte@ccrafters.com</a>.
             </p>
         </li>
     </ol>
