Ultina actualizacion Front End
Signed-off-by: Dandel67 <127786097+Dandel67@users.noreply.github.com>

--- a/camperas.html
+++ b/camperas.html
@@ -12,100 +12,47 @@
 </head>
 
 <body>
-
-    <header class="header">
-        <div class="container">
-            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
-        </div>
-    </header>
-
-    <main class="products container">
-
-        <h2>Buzos y camperas</h2>
-
-        <div class="product-content">
-
-            <div class="product">
-                <img src="./tienda/Camperas y buzos/e2a6c95c4933b681d0f89207146f2ccdf3fb29168c81dd845162c832c0d5c4ec278023.png"
-                    alt="">
-                <div class="product-txt">
-                    <h3>Buzo game over loser</h3>
-                    <p>Talle S</p>
-                    <p class="precio">$31.760</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/camperas y buzos/buzo gamer.webp" alt="">
-                <div class="product-txt">
-                    <h3>buzo gamer</h3>
-                    <p>Talle L</p>
-                    <p class="precio">$31.760</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/camperas y buzos/buzo joysticks.webp" alt="">
-                <div class="product-txt">
-                    <h3>buzo elige tu arma</h3>
-                    <p>Talle XL</p>
-                    <p class="precio">$30.390</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/camperas y buzos/campera joystick.webp" alt="">
-                <div class="product-txt">
-                    <h3>campera joysticks</h3>
-                    <p>Talle XS</p>
-                    <p class="precio">$22.360</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/camperas y buzos/buzo luminicente gamer.webp" alt="">
-                <div class="product-txt">
-                    <h3>buzo luminicente Republica Gamer</h3>
-                    <p>Talle M</p>
-                    <p class="precio">$20.430</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <<img src="./tienda/camperas y buzos/buzo play.webp" alt="">
-                    <div class="product-txt">
-                        <h3>Buzo logo color playStation </h3>
-                        <p>Talle L</p>
-                        <p class="precio">$20.380</p>
-                        <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                    </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/camperas y buzos/campera play.webp" alt="">
-                <div class="product-txt">
-                    <h3>campera logo PlayStation</h3>
-                    <p>Talle M</p>
-                    <p class="precio">$20.380</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/camperas y buzos/campera house of  dragon.webp" alt="">
-                <div class="product-txt">
-                    <h3>campera logo House of Dragon</h3>
-                    <p>Talle XL</p>
-                    <p class="precio">$20.380</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/buzo canguro joystick.webp" alt="">
+        <h3>buzo canguro joystick</h3>
+        <div class="price">$31.760</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/buzo gamer.webp" alt="">
+        <h3>buzo gamer</h3>
+        <div class="price">$32.990</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/buzo joysticks.webp" alt="">
+        <h3>buzo elige tu arma</h3>
+        <div class="price">$32.990</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/campera joystick.webp" alt="">
+        <h3>campera joysticks</h3>
+        <div class="price">$32.990</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/buzo luminicente gamer.webp" alt="">
+        <h3>buzo luminicente Republica Gamer</h3>
+        <div class="price">$39.790</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/buzo play.webp" alt="">
+        <h3>Buzo logo playStation</h3>
+        <div class="price">$32.960</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/campera play.webp" alt="">
+        <h3>campera logo PlayStation</h3>
+        <div class="price">$38.840</div>
+    </div>
+    <div class="camperas" data-name="p-6">
+        <img src="./tienda/camperas y buzos/campera house of  dragon.webp" alt="">
+        <h3>campera logo House of Dragon</h3>
+        <div class="price">$36.780</div>
+    </div>
+    <div></div>
 </body>
 
 </html>
