--- a/envios.html
+++ b/envios.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="envios.css">
     <title>Política de Envíos/Entregas</title>
 </head>
-<body>
 
-    <header class="header">
-        <div class="container">
-            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
-        </div>
-    </header>
-    
+<body>
     <h1>Política de Envíos/Entrega</h1>
-    <p>Las opciones de recepción de la compra online son las siguientes. Y pueden ser elegidas al momento de la compra.</p>
+    <p>Las opciones de recepción de la compra online son las siguientes. Y pueden ser elegidas al momento de la compra.
+    </p>
 
     <p><strong>Retira en Sucursal</strong></p>
-    <p>Una vez que un pedido haya quedado confirmado y el importe de su factura aprobado, salvo que existan inconvenientes excepcionales para la aceptación del pedido por parte de XTR, que le serán debidamente comunicados, recibirá un correo electrónico en el plazo de las 24 horas confirmando que la operación ha sido exitosa. Si el Usuario no recibe tal notificación vía correo electrónico deberá contactarse con CODE CRAFTERS a fin de constatar que no hubo errores de registro al ingresar la casilla de correo. En el caso de operaciones de "Retira en Sucursal", recibirá un email de confirmación indicando que ya puede retirar el pedido. Una vez que reciba el e-mail de confirmación de su compra podrá dirigirse a la sucursal, con el comprobante de la compra efectuada impreso, y retirar su pedido. Cuando se presente en la sucursal, deberá dirigirse al sector de Cajas, donde deberá presentar:
+    <p>Una vez que un pedido haya quedado confirmado y el importe de su factura aprobado, salvo que existan
+        inconvenientes excepcionales para la aceptación del pedido por parte de XTR, que le serán debidamente
+        comunicados, recibirá un correo electrónico en el plazo de las 24 horas confirmando que la operación ha sido
+        exitosa. Si el Usuario no recibe tal notificación vía correo electrónico deberá contactarse con CODECRAFTERS a
+        fin de constatar que no hubo errores de registro al ingresar la casilla de correo. En el caso de operaciones de
+        "Retira en Sucursal", recibirá un email de confirmación indicando que ya puede retirar el pedido. Una vez que
+        reciba el e-mail de confirmación de su compra podrá dirigirse a la sucursal, con el comprobante de la compra
+        efectuada impreso, y retirar su pedido. Cuando se presente en la sucursal, deberá dirigirse al sector de Cajas,
+        donde deberá presentar:</p>
 
-        •	DNI de la persona autorizada a retirar el pedido.
-        •	Mail de confirmación de compra, que incluye el número de pedido.
-        •	Medios de contacto con CODE CRAFTERS.
-        •	En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados   el día hábil siguiente, en los horarios de atención de CODE CRAFTERS, una vez que reciba el email de confirmación de su compra.
+    <ul>
+        <li>DNI de la persona autorizada a retirar el pedido.</li>
+        <li>Mail de confirmación de compra, que incluye el número de pedido.</li>
+        <li>Comprobante de pago.</li>
+        <li>Medios de contacto con CODECRAFTERS.</li>
+        <li>En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados el día hábil siguiente,
+            en los horarios de atención de CODECRAFTERS, una vez que reciba el email de confirmación de su compra.</li>
+    </ul>
+    <p>En el acto de la entrega se le exhibirá al cliente el estado de la mercadería y los accesorios que vienen con
+        esta, debiendo el comprador (o la persona autorizada por este, en su caso) verificar que la mercadería entregada
+        corresponde a los artículos incluidos en el pedido y en la factura que se le presentará en el acto de entrega.
+        La firma del remito y/o el comprobante de pago implicará declaración de conformidad con la mercadería entregada,
+        sin perjuicio de los derechos que le pudieren corresponder en caso de que la misma resultara por algún motivo
+        defectuosa.
+    </p>
 
-        En el acto de la entrega se le exhibirá al cliente el estado de la mercadería y los accesorios que vienen con esta, debiendo el comprador (o la persona autorizada por este, en su caso) verificar que la mercadería entregada corresponde a los artículos incluidos en el pedido y en la factura que se le presentará en el acto de entrega. La firma del remito y/o el comprobante de pago implicará declaración de conformidad con la mercadería entregada, sin perjuicio de los derechos que le pudieren corresponder en caso de que la misma resultara por algún motivo defectuosa.
-        </p>
-
-        <p><strong>Envíos a domicilio</strong></p>
-        <p>El servicio de entrega a domicilio tendrá un costo, que aparecerá expresado y diferenciado en la etapa del proceso de llenado del carrito previa a la emisión de su pedido. Dicho costo se añadirá al de las mercaderías detalladas en la correspondiente factura. La confirmación del pedido y la aprobación de la emisión de la factura, implicarán la aceptación del Usuario del costo del servicio de entrega a domicilio y consecuentemente también el monto total de la correspondiente factura.
+    <p><strong>Envíos a domicilio</strong></p>
+    <p>El servicio de entrega a domicilio tendrá un costo, que aparecerá expresado y diferenciado en la etapa del
+        proceso de llenado del carrito previa a la emisión de su pedido. Dicho costo se añadirá al de las mercaderías
+        detalladas en la correspondiente factura. La confirmación del pedido y la aprobación de la emisión de la
+        factura, implicarán la aceptación del Usuario del costo del servicio de entrega a domicilio y consecuentemente
+        también el monto total de la correspondiente factura.
 
         En el domicilio de entrega podrá recibir la compra cualquier persona mayor a 18 años, mostrando su DNI.
 
-        No se entregan productos en consignación. No se realizan cobros a domicilio contra entrega del producto, sin excepción.
+        No se entregan productos en consignación. No se realizan cobros a domicilio contra entrega del producto, sin
+        excepción.
 
-        CODE CRAFTERS se reserva el derecho de modificar unilateralmente la presentación y configuración del Sitio Web, así como los correspondientes servicios y condiciones requeridas para su uso, sin que de ello se derive derecho alguno de compensación a favor del usuario.
-        </p>
+        CODECRAFTERS se reserva el derecho de modificar unilateralmente la presentación y configuración del Sitio Web,
+        así como los correspondientes servicios y condiciones requeridas para su uso, sin que de ello se derive derecho
+        alguno de compensación a favor del usuario.
+    </p>
 </body>
+
 </html>
