--- a/index.html
+++ b/index.html
@@ -292,6 +292,21 @@
                 </ul>
             </div>
 
+            <div class="link">
+                <ul>
+                    <li>
+                        <a href="Trabaja_con_nosotros.html">
+                            <h3>Trabaja con nosotros</h3>
+                        </a>
+                    </li>
+                </ul>
+                <p>
+                    <a>Si queres ser un CodeCrafter accedé <br> a nuestra bolsa de trabajo.<br>
+                        Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff. <br>
+                        <h4>Que estas esperando!!</h4>
+                    </a>
+                </p>
+            </div>
 
             <div class="link">
                 <h3>Siguenos</h3>
@@ -305,7 +320,7 @@
             </div>
 
         </div>
-        <br>
+        <br><br>
         <p>&copy; 2024 CodeCrafters. Todos los derechos reservados.</p>
         <br>
 
@@ -335,13 +350,13 @@
                         Remember me</label>
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="btn" id="loginButton">Login</button>
+                <button type="submit" class="btn">Login</button>
                 <div class="login-register">
                     <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
-        <div id="registerForm" class="form-box register">
+        <div class="form-box register">
             <h2>Registration</h2>
             <form action="#">
                 <div class="input-box">
@@ -362,7 +377,7 @@
                 <div class="remember-forgot">
                     <label><input type="checkbox"> I Agree to terms & conditions</label>
                 </div>
-                <button type="submit" class="btn" id="registerButton">Register</button>
+                <button type="submit" class="btn">Register</button>
                 <div class="login-register">
                     <p>Already have an account? <a href="#" class="login-link">Login</a></p>
                 </div>
