--- a/seccion4.html
+++ b/seccion4.html
@@ -99,11 +99,11 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Buenos Aires</li>
                         <li><i class="fas fa-phone"></i> (444) 444 444 444</li>
-                        <li><i class="fas fa-envelope-open-text"></i> codecrafters@website.com</li>
+                        <li><i class="fas fa-envelope-open-text"></i> https://thecodecrafters.netlify.app/</li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero provident ipsam necessitatibus
-                        repellendus?</p>
-                    <p>CodeCrafters.com</p>
+                    <p>Somos expertos en insumos informáticos con una década de liderazgo en el mercado tecnológico
+                        especializado. </p>
+                    <p>Thecodecrafters.netlify.app/</p>
                 </div>
             </div>
         </div>
@@ -158,69 +158,6 @@
         </div>
 
     </footer>
-
-    <button id="btn-login" class="btnLogin-popup">
-        <i class="fas fa-user"></i> Login
-    </button>
-
-    <div id="loginForm" class="login-form wrapper">
-        <span class="icon-close"><ion-icon name="close"></ion-icon></span>
-        <div class="form-box login">
-            <h2>Login</h2>
-            <form action="#">
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox">
-                        Remember me</label>
-                    <a href="#">Forgot Password?</a>
-                </div>
-                <button type="submit" class="btn">Login</button>
-                <div class="login-register">
-                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
-                </div>
-            </form>
-        </div>
-        <div class="form-box register">
-            <h2>Registration</h2>
-            <form action="#">
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" required>
-                    <label>Username</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox"> I Agree to terms & conditions</label>
-                </div>
-                <button type="submit" class="btn">Register</button>
-                <div class="login-register">
-                    <p>Already have an account? <a href="#" class="login-link">Login</a></p>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <script src="script4.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 
