--- a/Trabaja_con_nosotros.html
+++ b/Trabaja_con_nosotros.html
@@ -170,7 +170,7 @@
                     <li><a href="quienessomos.html">Nosotros</a></li>
                     <li><a href="seccion2.html">Nuestros servicios</a></li>
                     <li><a href="privacy.html">Condiciónes</a></li>
-                    <li><a href="Trabaja_con_nosotros.html">Afiliate</a></li>
+                    <li><a href="postulante.html">Afiliate</a></li>
                 </ul>
             </div>
 
@@ -206,10 +206,10 @@
                 </ul>
                 <p>
                     <a>Si queres ser un CodeCrafter accedé <br> a nuestra bolsa de trabajo.<br>
-                        Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff. <br>
-                        <h4>Que estas esperando!!</h4>
-                    </a>
-                </p>
+                        Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff.</a>
+                </p><br>
+                <h4>Que estas esperando!!</h4>
+
             </div>
 
 
