--- a/remeras.html
+++ b/remeras.html
@@ -1,4 +1,4 @@
-<!DOCTYPE "html">
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -12,112 +12,52 @@
 </head>
 
 <body>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera gamer 2.webp" alt="">
+        <h3>remera blanca gamer</h3>
+        <div class="price">$21.360</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera gamer.webp" alt="">
+        <h3>remera blanca evolución gamer</h3>
+        <div class="price">$20.780</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera amd ryzen.webp" alt="">
+        <h3>remera AMD Ryzen gris</h3>
+        <div class="price">$20.390</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera codigo.webp" alt="">
+        <h3>remera bordo codeando</h3>
+        <div class="price">$22.360</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera debian.webp" alt="">
+        <h3>remera blanca logo Debian</h3>
+        <div class="price">$20.430</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera evolución.webp" alt="">
+        <h3>remera azul evolución</h3>
+        <div class="price">$20.380</div>
+    </div>
 
-    <header class="header">
-        <div class="container">
-            <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
-        </div>
-    </header>
-
-    <main class="products container">
-
-        <h2>Remeras</h2>
-
-        <div class="product-content">
-
-            <div class="product">
-                <img src="./tienda/remeras/remera gamer 2.webp" alt="">
-                <div class="product-txt">
-                    <h3>Remera blanca gamer</h3>
-                    <p>Talle S</p>
-                    <p class="precio">$21.360</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera gamer.webp" alt="">
-                <div class="product-txt">
-                    <h3>Remera blanca evolución gamer</h3>
-                    <p>Talle L</p>
-                    <p class="precio">$20.780</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera amd ryzen.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera AMD Ryzen gris</h3>
-                    <p>Talle M</p>
-                    <p class="precio">$20.390</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera codigo.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera bordo codeando</h3>
-                    <p>Talle S</p>
-                    <p class="precio">$22.360</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera debian.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera blanca logo Debian</h3>
-                    <p>Talle XL</p>
-                    <p class="precio">$20.430</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera evolución.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera azul evolución</h3>
-                    <p>Talle XL</p>
-                    <p class="precio">$20.380</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera google cloud.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera negra logo Google Cloud</h3>
-                    <p>Talle L</p>
-                    <p class="precio">$20.840</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera python.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera negra con logotipo Python</h3>
-                    <p>Talle M</p>
-                    <p class="precio">$21.480</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-            <div class="product">
-                <img src="./tienda/remeras/remera codigo python.webp" alt="">
-                <div class="product-txt">
-                    <h3>remera negra con codigo en python</h3>
-                    <p>Talle S</p>
-                    <p class="precio">$21.480</p>
-                    <a href="#" class="agregar-carrito btn-2">Comprar</a>
-                </div>
-            </div>
-
-        </div>
-
-    </main>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera google cloud.webp" alt="">
+        <h3>remera negra logo Google Cloud</h3>
+        <div class="price">$20.840</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera python.webp" alt="">
+        <h3>remera negra logo Python</h3>
+        <div class="price">$21.480</div>
+    </div>
+    <div class="remera" data-name="p-6">
+        <img src="./tienda/remeras/remera codigo python.webp" alt="">
+        <h3>remera negra con codigo en python</h3>
+        <div class="price">$21.480</div>
+    </div>
 
 </body>
 
