--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <li><a href="quienessomos.html">Nosotros</a></li>
                     <li><a href="seccion2.html">Nuestros servicios</a></li>
                     <li><a href="privacy.html">Condiciónes</a></li>
-                    <li><a href="Trabaja_con_nosotros.html">Afiliate</a></li>
+                    <li><a href="trabaja_con_nosotros.html">Afiliate</a></li>
                 </ul>
             </div>
 
@@ -293,22 +293,6 @@
             </div>
 
             <div class="link">
-                <ul>
-                    <li>
-                        <a href="Trabaja_con_nosotros.html">
-                            <h3>Trabaja con nosotros</h3>
-                        </a>
-                    </li>
-                </ul>
-                <p>
-                    <a>Si queres ser un CodeCrafter accedé <br> a nuestra bolsa de trabajo.<br>
-                        Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff. <br>
-                        <h4>Que estas esperando!!</h4>
-                    </a>
-                </p>
-            </div>
-
-            <div class="link">
                 <h3>Siguenos</h3>
                 <div class="social-link">
                     <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
@@ -320,7 +304,7 @@
             </div>
 
         </div>
-        <br><br>
+        <br>
         <p>&copy; 2024 CodeCrafters. Todos los derechos reservados.</p>
         <br>
 
@@ -335,6 +319,7 @@
         <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
+                <div class="error-message" id="loginErrorMessage"></div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
                     <input type="email" required>
@@ -342,7 +327,9 @@
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
+                    <input type="password" id="loginPassword" required>
+                    <span class="toggle-password icon" id="loginTogglePassword"><ion-icon name="eye"></ion-icon>
+                    </span>
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
@@ -350,15 +337,16 @@
                         Remember me</label>
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn" id="loginButton">Login</button>
                 <div class="login-register">
                     <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
-        <div class="form-box register">
+        <div id="registerForm" class="form-box register">
             <h2>Registration</h2>
             <form action="#">
+                <div class="error-message" id="registerErrorMessage"></div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
                     <input type="text" required>
@@ -371,13 +359,15 @@
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
+                    <input type="password" id="registerPassword" required>
+                    <span class="toggle-password icon" id="registerTogglePassword"><ion-icon name="eye"></ion-icon>
+                    </span>
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox"> I Agree to terms & conditions</label>
                 </div>
-                <button type="submit" class="btn">Register</button>
+                <button type="submit" class="btn" id="registerButton">Register</button>
                 <div class="login-register">
                     <p>Already have an account? <a href="#" class="login-link">Login</a></p>
                 </div>
