--- a/seccion2.html
+++ b/seccion2.html
@@ -67,7 +67,7 @@
                     <i class="fas fa-globe"></i>
                 </div>
                 <h2>Internet</h2>
-
+                <a href="" class="serviciosboton">Leer más</a>
             </div>
 
             <div class="card" id="card2">
@@ -75,14 +75,14 @@
                     <i class="fas fa-wrench"></i>
                 </div>
                 <h2>Reparación</h2>
-
+                <a href="" class="serviciosboton">Leer más</a>
             </div>
             <div class="card" id="card3">
                 <div class="icon">
                     <i class="fas fa-handshake"></i>
                 </div>
                 <h2>Soporte Virtual</h2>
-
+                <a href="" class="serviciosboton">Leer más</a>
             </div>
         </div>
     </div>
@@ -234,7 +234,7 @@
                     <li><a href="quienessomos.html">Nosotros</a></li>
                     <li><a href="seccion2.html">Nuestros servicios</a></li>
                     <li><a href="privacy.html">Condiciónes</a></li>
-                    <li><a href="postulante.html">Afiliate</a></li>
+                    <li><a href="trabaja_con_nosotros.html">Afiliate</a></li>
                 </ul>
             </div>
 
@@ -273,8 +273,76 @@
         </div>
 
     </footer>
+
+    <button id="btn-login" class="btnLogin-popup">
+        <i class="fas fa-user"></i> Login
+    </button>
+
+    <div id="loginForm" class="login-form wrapper">
+        <span class="icon-close"><ion-icon name="close"></ion-icon></span>
+        <div class="form-box login">
+            <h2>Login</h2>
+            <form action="#">
+                <div class="error-message" id="loginErrorMessage"></div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" id="loginPassword" required>
+                    <span class="toggle-password icon" id="loginTogglePassword"><ion-icon name="eye"></ion-icon>
+                    </span>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">
+                        Remember me</label>
+                    <a href="#">Forgot Password?</a>
+                </div>
+                <button type="submit" class="btn" id="loginButton">Login</button>
+                <div class="login-register">
+                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+                </div>
+            </form>
+        </div>
+        <div id="registerForm" class="form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+                <div class="error-message" id="registerErrorMessage"></div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" id="registerPassword" required>
+                    <span class="toggle-password icon" id="registerTogglePassword"><ion-icon name="eye"></ion-icon>
+                    </span>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox"> I Agree to terms & conditions</label>
+                </div>
+                <button type="submit" class="btn" id="registerButton">Register</button>
+                <div class="login-register">
+                    <p>Already have an account? <a href="#" class="login-link">Login</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script2.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
