--- a/index.html
+++ b/index.html
@@ -334,17 +334,17 @@
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">
-                        Remember me</label>
-                    <a href="#">Forgot Password?</a>
+                        Recordarme</label>
+                    <a href="#">Olvidaste el Password?</a>
                 </div>
                 <button type="submit" class="btn" id="loginButton">Login</button>
                 <div class="login-register">
-                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+                    <p>No tienes cuenta? <a href="#" class="register-link">Registrate</a></p>
                 </div>
             </form>
         </div>
         <div id="registerForm" class="form-box register">
-            <h2>Registration</h2>
+            <h2>Registro</h2>
             <form action="#">
                 <div class="error-message" id="registerErrorMessage"></div>
                 <div class="input-box">
@@ -365,11 +365,11 @@
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox"> I Agree to terms & conditions</label>
+                    <label><input type="checkbox"> Acepto los Terminos y Condiciones</label>
                 </div>
-                <button type="submit" class="btn" id="registerButton">Register</button>
+                <button type="submit" class="btn" id="registerButton">Registrarse</button>
                 <div class="login-register">
-                    <p>Already have an account? <a href="#" class="login-link">Login</a></p>
+                    <p>Ya tienes una cuenta? <a href="#" class="login-link">Login</a></p>
                 </div>
             </form>
         </div>
