--- a/tazas.html
+++ b/tazas.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+
     <header class="header">
         <div class="container">
             <button class="button-index" onclick="window.location.href = 'index.html';">Inicio</button>
@@ -28,7 +28,7 @@
             <div class="product">
                 <img src="./tienda/tazas/fivenightsatfreddys2.png" alt="">
                 <div class="product-txt">
-                    <h3>taza gamer joystick</h3>
+                    <h3>taza gamer over</h3>
                     <p>Ceramica</p>
                     <p class="precio">$31.760</p>
                     <a href="#" class="agregar-carrito btn-2">Comprar</a>
