--- a/index.html
+++ b/index.html
@@ -313,7 +313,10 @@
     <button id="btn-login" class="btnLogin-popup">
         <i class="fas fa-user"></i> Login
     </button>
+    <button class="btn-panel">
+        <i class="fa-solid fa-users"></i> Panel
 
+    </button>
     <div id="loginForm" class="login-form wrapper">
         <span class="icon-close"><ion-icon name="close"></ion-icon></span>
         <div class="form-box login">
@@ -334,17 +337,17 @@
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">
-                        Recordarme</label>
-                    <a href="#">Olvidaste el Password?</a>
+                        Remember me</label>
+                    <a href="#">Forgot Password?</a>
                 </div>
                 <button type="submit" class="btn" id="loginButton">Login</button>
                 <div class="login-register">
-                    <p>No tienes cuenta? <a href="#" class="register-link">Registrate</a></p>
+                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
         <div id="registerForm" class="form-box register">
-            <h2>Registro</h2>
+            <h2>Registration</h2>
             <form action="#">
                 <div class="error-message" id="registerErrorMessage"></div>
                 <div class="input-box">
@@ -365,11 +368,11 @@
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox"> Acepto los Terminos y Condiciones</label>
+                    <label><input type="checkbox"> I Agree to terms & conditions</label>
                 </div>
-                <button type="submit" class="btn" id="registerButton">Registrarse</button>
+                <button type="submit" class="btn" id="registerButton">Register</button>
                 <div class="login-register">
-                    <p>Ya tienes una cuenta? <a href="#" class="login-link">Login</a></p>
+                    <p>Already have an account? <a href="#" class="login-link">Login</a></p>
                 </div>
             </form>
         </div>
